fixed a layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -330,13 +330,14 @@
     margin-bottom: 20px;
     height: 8rem;
     border-radius: 10px;
-    width: 13.5rem;
+    width: 30%;
+    /* width: 13.5rem; */
     /* margin-top: 30px; */
   }
   .count-container > img {
     border-radius: 10px;
     height: 8rem;
-    margin-left: -70px;
+    margin-left: -74px;
   }
   .count-output {
     z-index: 1;
@@ -361,7 +362,8 @@
     width: 100%;
     height: 100%;
     background-image: url(assets/bg-dark-theme.png);
-    padding: 30px 20.5rem 30px 20.5rem;
+    padding: 30px 20% 30px 20%;
+    /* padding: 30px 20.5rem 30px 20.5rem; */
 
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
@@ -509,13 +511,18 @@
     margin-bottom: 20px;
     height: 8rem;
     border-radius: 10px;
-    width: 19rem;
+    width: 32%;
+    /* width: 19rem; */
     /* margin-top: 30px; */
   }
+
   .count-container > img {
     border-radius: 10px;
     height: 8rem;
     margin-left: -70px;
+    /* height: auto;
+    display: block; */
+    /* width: 100%; */
   }
   .count-output {
     z-index: 1;
